--- a/escape-from-duckov/src/locales/ru.json
+++ b/escape-from-duckov/src/locales/ru.json
@@ -81,10 +81,16 @@
             "type": "website"
         },
         "modDetail": {
-            "title": "Моды Escape from Duckov | Лучшее кастомное оружие, карты и геймплейные твики",
-            "description": "Откройте для себя лучшие моды Escape from Duckov — новое оружие, кастомные карты, улучшенную графику и геймплейные твики. Обновите свой опыт выживания с помощью творений сообщества.",
-            "keywords": "моды Escape from Duckov, кастомное оружие, моды карт, геймплейные твики, визуальные моды, контент сообщества",
+            "title": "Моды Escape from Duckov | Best Custom Weapons, Maps & Gameplay Tweaks",
+            "description": "Discover the best Escape from Duckov mods — new weapons, custom maps, enhanced visuals, and gameplay tweaks. Upgrade your survival experience with community creations.",
+            "keywords": "Escape from Duckov mods, custom weapons, map mods, gameplay tweaks, visual mods, community content",
             "type": "article"
+        },
+        "steamCharts": {
+            "title": "Steam-чарты Escape from Duckov | Количество игроков в реальном времени и тренды",
+            "description": "Проверяйте Steam-чарты Escape from Duckov, чтобы отслеживать **актуальное количество игроков**, **пики за 24 часа**, **динамику обзоров** и **рост сообщества** в одном месте.",
+            "keywords": "Escape from Duckov Steam-чарты, Escape from Duckov количество игроков, SteamDB, статистика выживания, тренды рейдов",
+            "type": "website"
         },
         "items": {
             "title": "Предметы Escape from Duckov | Полная база данных оружия и снаряжения",
@@ -161,9 +167,10 @@
     },
     "HomePage": {
         "hero": {
-            "title": "Сообщество фанатов Escape from Duckov",
-            "subtitle": "Escape from Duckov — это инди-выживалка/RPG с PVE-режимом в мире уток! Собирайте ресурсы, стройте свое убежище и улучшайте снаряжение в мире Duckov. Начните с нуля и доберитесь до вершины. Перехитрите враждебных уток, выживите или выберитесь живым.",
-            "steamButton": "Играть в Steam"
+            "title": "Фан-сообщество Escape from Duckov",
+            "subtitle": "Escape from Duckov — это PVE-инди-RPG о выживании в мире уток! Собирайте ресурсы, стройте укрытие и улучшайте снаряжение, чтобы добиться вершины в мире Duckov. Начните с нуля и поднимитесь на вершину, перехитрив враждебных уток и выжив.",
+            "steamButton": "Play on Steam",
+            "steamChartsButton": "View Steam Charts"
         },
         "video": {
             "playIcon": "▶",
@@ -392,9 +399,15 @@
     },
     "ModsPage": {
         "title": "Моды Escape from Duckov",
-        "subtitle": "Откройте для себя и скачайте лучшие моды Escape from Duckov, созданные сообществом. Улучшите свой геймплей с помощью пользовательских модификаций, включая улучшения качества жизни, новые функции, визуальные улучшения и геймплейные твики. Просматривайте моды по категориям и найдите идеальные дополнения к вашему опыту Duckov."
+        "subtitle": "Откройте для себя и скачайте лучшие моды Escape from Duckov, созданные сообществом. Улучшите свой геймплей с помощью пользовательских модификаций, включая улучшения качества жизни, новые функции, визуальные улучшения и геймплейные твики. Просматривайте моды по категориям и найдите идеальные дополнения к вашему опыту Duckov.",
+        "stats": {
+            "releaseDate": "Дата выхода",
+            "subscribers": "Подписчики"
+        }
     },
-    "ModDetailPage": {},
+    "ModDetailPage": {
+        "linkLabel": "Ссылка на мод"
+    },
     "ItemsPage": {
         "title": "Предметы Escape from Duckov",
         "subtitle": "Полная база данных Escape from Duckov с оружием, снаряжением, боеприпасами, ключами и рыбой. Просмотрите огнестрельное оружие, холодное оружие, броню, шлемы, боеприпасы, ключи, рыбу и защитное снаряжение. Найдите характеристики, описания и детали для каждого предмета в арсенале Duckov.",
@@ -870,6 +883,50 @@
         "thankYou": {
             "title": "Благодарим",
             "text": "Спасибо, что являетесь частью сообщества DuckovGame! Ваши отзывы и поддержка помогают нам продолжать предоставлять наилучший опыт для наших пользователей по всему миру."
+        }
+    },
+    "SteamChartsPage": {
+        "title": "Снимок Steam-чартов",
+        "hero": {
+            "description": "Steam-чарты Escape from Duckov дают вам живое представление о динамике рейдов, всплесках в часы пик и росте популяции 'утиного ополчения' каждый сезон.",
+            "points": {
+                "live": "Количество активных игроков Escape from Duckov **обновляется в реальном времени** прямо из SteamDB.",
+                "peak": "Отслеживайте **24-часовые и исторические пики**, чтобы синхронизировать свои рейды с сообществом.",
+                "reviews": "Следите за колебаниями **обзоров**, всплесками **подписчиков** и пиками **списка желаемого** одним взглядом."
+            }
+        },
+        "note": "Статистика отражает снимки SteamDB и предназначена только для быстрого ознакомления.",
+        "cards": {
+            "playersNow": {
+                "label": "Игроков онлайн",
+                "value": "130k+",
+                "desc": "Рейды в Duckov остаются активными круглосуточно: десятки тысяч отрядов готовятся к вылазкам."
+            },
+            "peak24h": {
+                "label": "Пик за 24 часа",
+                "value": "170k+",
+                "desc": "Часы пик стабильно держатся **намного выше** уровня недели запуска, показывая, что спрос продолжает расти."
+            },
+            "positiveReviews": {
+                "label": "Положительные обзоры",
+                "value": "94%+",
+                "desc": "Подавляющая похвала за глубину прогресса, координацию в кооперативном режиме и улучшения убежища."
+            },
+            "followers": {
+                "label": "Подписчики Steam",
+                "value": "95k+",
+                "desc": "Масштабное сообщество, которое следит за вайпами, балансировкой и новыми дропами снаряжения."
+            }
+        },
+        "summary": {
+            "title": "Почему количество игроков Escape from Duckov имеет значение",
+            "description": "Эти 'импульсные точки' преобразуют Steam-чарты в реальные решения для рейдов: когда стоит 'нырять' (заходить), когда делать запасы и когда ожидать следующего бума в Duckov. Используйте их вместе с планированием своего схрона и улучшениями убежища для максимальной эффективности.",
+            "items": {
+                "ranking": "Высокий рейтинг выживания: регулярно входит в **топ-10** по ежедневному числу активных шутеров.",
+                "twitch": "Присутствие на Twitch: тысячи людей ежедневно смотрят извлечения из рейдов, обзоры убежищ и турниры.",
+                "owners": "По оценкам, более **1 миллиона** владельцев по всему миру, с новыми отрядами, присоединяющимися в каждом цикле вайпа.",
+                "community": "Динамика сообщества: всплески в списке желаемого и поток обзоров прямо указывают на предстоящие обновления контента."
+            }
         }
     }
 }
