--- a/escape-from-duckov/src/locales/zh.json
+++ b/escape-from-duckov/src/locales/zh.json
@@ -81,10 +81,16 @@
             "type": "website"
         },
         "modDetail": {
-            "title": "逃离达科夫模组 | 最佳自定义武器、地图和游戏玩法调整",
-            "description": "发现最佳的逃离达科夫模组——新武器、自定义地图、增强视觉效果和游戏玩法调整。利用社区创作升级您的生存体验。",
-            "keywords": "逃离达科夫模组, 自定义武器, 地图模组, 游戏玩法调整, 视觉模组, 社区内容",
+            "title": "逃离达科夫模组 | 最佳自定义武器、地图与玩法调整",
+            "description": "Discover the best Escape from Duckov mods — new weapons, custom maps, enhanced visuals, and gameplay tweaks. Upgrade your survival experience with community creations.",
+            "keywords": "Escape from Duckov mods, custom weapons, map mods, gameplay tweaks, visual mods, community content",
             "type": "article"
+        },
+        "steamCharts": {
+            "title": "Escape from Duckov Steam 图表 | 实时玩家数量与趋势",
+            "description": "查看 Escape from Duckov Steam 图表，在一个地方监控实时玩家数量、24 小时峰值、评论动态和社区增长情况。",
+            "keywords": "Escape from Duckov steam 图表, Escape from Duckov 玩家数量, SteamDB, 生存统计, 突袭趋势",
+            "type": "website"
         },
         "items": {
             "title": "逃离达科夫物品 | 完整的武器和装备数据库",
@@ -161,9 +167,10 @@
     },
     "HomePage": {
         "hero": {
-            "title": "逃离达科夫 (Escape from Duckov) 粉丝社区",
-            "subtitle": "逃离达科夫是一款 PVE 独立生存 RPG 游戏——在一个鸭子的世界里！在达科夫的世界中搜寻资源、建造您的藏身处并升级您的装备。白手起家，登上顶峰。智取敌对鸭子，生存下来，或者成功逃生。",
-            "steamButton": "在 Steam 上游玩"
+            "title": "Escape from Duckov 粉丝与社区",
+            "subtitle": "《Escape from Duckov》是一款发生在鸭子世界的 PVE 独立生存 RPG！搜刮资源、建造据点、升级装备，从零开始崛起巅峰。巧妙对付敌对的鸭子，活着突围。",
+            "steamButton": "Play on Steam",
+            "steamChartsButton": "View Steam Charts"
         },
         "video": {
             "playIcon": "▶",
@@ -178,7 +185,7 @@
             },
             "section2": {
                 "title": "危险的领土等待着您",
-                "p1": "穿梭于五个不同的区域，每个区域都有其独特的个性和危险。从辐射性的“归零地”到“仓库区”的工业迷宫，每个地点都讲述着达科夫世界中出了什么差错的故事。探索详细的<a href=\"/maps\">互动地图</a>来规划您的路线。",
+                "p1": "穿梭于五个不同的区域，每个区域都有其独特的个性和危险。从辐射性的「归零地」到「仓库区」的工业迷宫，每个地点都讲述着达科夫世界中出了什么差错的故事。探索详细的<a href=\"/maps\">互动地图</a>来规划您的路线。",
                 "p2": "撤离计时器不只是倒计时——它是您的生命线。冒险争取更好的奖励，或者使用基本补给安全撤退。在达科夫，运气偏爱大胆的人，但生存偏爱聪明的人。您会为了传奇战利品而冒一切风险，还是选择安全？"
             },
             "section3": {
@@ -224,7 +231,7 @@
             "guide2": {
                 "badge": "策略",
                 "title": "在风暴中生存",
-                "desc": "一份关于准备和度过周期性“风暴”事件的综合指南，这些事件威胁着结束您的跑图。探索我们的<a href=\"/guides\">高级指南</a>，包括风暴区进入策略。"
+                "desc": "一份关于准备和度过周期性「风暴」事件的综合指南，这些事件威胁着结束您的跑图。探索我们的<a href=\"/guides\">高级指南</a>，包括风暴区进入策略。"
             },
             "guide3": {
                 "badge": "进阶",
@@ -305,11 +312,11 @@
             "title": "常见问题",
             "q1": {
                 "question": "逃离达科夫只是《塔科夫》的克隆品吗？",
-                "answer": "完全不是。虽然它确实从撤离射击游戏中汲取了灵感，但逃离达科夫是一个完整的单人体验，拥有自己的故事、进展系统和独特的机制，如周期性“风暴”事件。探索我们的<a href=\"/guides\">综合指南</a>来了解独特的游戏机制。"
+                "answer": "完全不是。虽然它确实从撤离射击游戏中汲取了灵感，但逃离达科夫是一个完整的单人体验，拥有自己的故事、进展系统和独特的机制，如周期性「风暴」事件。探索我们的<a href=\"/guides\">综合指南</a>来了解独特的游戏机制。"
             },
             "q2": {
                 "question": "当我死亡时会发生什么？",
-                "answer": "在“平衡”难度下，您会在死亡地点掉落您的物品栏——只有一次机会找回。在“极限”难度下，死亡意味着永久损失。较低难度会更宽容，后果最小。"
+                "answer": "在「平衡」难度下，您会在死亡地点掉落您的物品栏——只有一次机会找回。在「极限」难度下，死亡意味着永久损失。较低难度会更宽容，后果最小。"
             },
             "q3": {
                 "question": "我可以离线游玩吗？",
@@ -317,7 +324,7 @@
             },
             "q4": {
                 "question": "游戏有多长？",
-                "answer": "主线战役提供了 50 多个小时的内容，通过动态战利品、多种难度设置和应对“风暴”事件的持续挑战，具有广泛的重玩价值。查看我们的<a href=\"/maps\">地图</a>、<a href=\"/wiki/quests\">任务</a>和<a href=\"/items\">物品</a>数据库，以发现达科夫提供的一切。"
+                "answer": "主线战役提供了 50 多个小时的内容，通过动态战利品、多种难度设置和应对「风暴」事件的持续挑战，具有广泛的重玩价值。查看我们的<a href=\"/maps\">地图</a>、<a href=\"/wiki/quests\">任务</a>和<a href=\"/items\">物品</a>数据库，以发现达科夫提供的一切。"
             }
         }
     },
@@ -392,7 +399,11 @@
     },
     "ModsPage": {
         "title": "逃离达科夫模组",
-        "subtitle": "发现并下载社区创建的最佳逃离达科夫模组。通过自定义修改增强您的游戏体验，包括生活质量改进、新功能、视觉增强和游戏玩法调整。按类别浏览模组，为您的达科夫体验找到完美的附加内容。"
+        "subtitle": "发现并下载社区创建的最佳逃离达科夫模组。通过自定义修改增强您的游戏体验，包括生活质量改进、新功能、视觉增强和游戏玩法调整。按类别浏览模组，为您的达科夫体验找到完美的附加内容。",
+        "stats": {
+            "releaseDate": "发布日期",
+            "subscribers": "订阅数"
+        }
     },
     "ModDetailPage": {},
     "ItemsPage": {
@@ -517,9 +528,9 @@
         "lastUpdated": "最后更新：2025 年 10 月 28 日",
         "generalInfo": {
             "title": "一般信息",
-            "p1": "在 DuckovGame，我们致力于保护我们网站和应用程序所有用户的隐私。本隐私政策适用于 duckovgame.com 提供的所有服务和产品。使用本网站即表示您同意本隐私政策，并确认您已达到同意其条款的法定年龄。在本政策发生任何变更后继续使用本网站，将构成对这些变更的接受。",
-            "p2": "本网站适用于 16 岁及以上的访客。如果您未满 16 岁，请不要使用本网站。如果您是家长或监护人并允许儿童访问本网站，则表示您代表他们同意本隐私政策。",
-            "p3": "如果您对本隐私政策有任何疑问，请联系我们："
+            "p1": "以下服务条款《本协议》非常重要，请仔细阅读。您对《服务条款》的接受表示您同意受其约束。本协议在您与 DuckovGame（以下简称：本网站、我们）之间签订，涉及您对我们网站的使用，包括其中可用的任何材料和服务，以及任何后续网站（统称为本网站）。",
+            "p2": "使用本网站，即表示您同意本服务条款并确认您的年龄已超过 16 岁。本协议中对您或您的的任何引用均适用于使用本网站的个人。",
+            "p3": "本协议包含一项强制性仲裁条款，详见下文第 11 节。该条款要求以个人仲裁方式解决争议，而非通过陪审团审判、法院诉讼或集体诉讼。请仔细阅读本节。"
         },
         "dataCollection": {
             "title": "我们收集哪些数据？",
@@ -622,8 +633,8 @@
         "date": "2025 年 10 月 28 日",
         "generalInfo": {
             "title": "一般信息",
-            "p1": "以下服务条款（“本协议”）非常重要，请仔细阅读。您对本“服务条款”的接受表示您同意受其约束。本协议在您与 DuckovGame（以下简称：“本网站”、“我们”）之间签订，涉及您对我们网站的使用，包括其中可用的任何材料和服务，以及任何后续网站（“本网站”）。",
-            "p2": "使用本网站，即表示您同意本服务条款并确认您的年龄已超过 16 岁。本协议中对“您”或“您的”的任何引用均适用于使用本网站的个人。",
+            "p1": "以下服务条款《本协议》非常重要，请仔细阅读。您对《服务条款》的接受表示您同意受其约束。本协议在您与 DuckovGame（以下简称：本网站、我们）之间签订，涉及您对我们网站的使用，包括其中可用的任何材料和服务，以及任何后续网站（统称为本网站）。",
+            "p2": "使用本网站，即表示您同意本服务条款并确认您的年龄已超过 16 岁。本协议中对您或您的的任何引用均适用于使用本网站的个人。",
             "p3": "本协议包含一项强制性仲裁条款，详见下文第 11 节。该条款要求以个人仲裁方式解决争议，而非通过陪审团审判、法院诉讼或集体诉讼。请仔细阅读本节。"
         },
         "changes": {
@@ -669,7 +680,7 @@
         },
         "disclaimer": {
             "title": "免责声明",
-            "p1": "在法律允许的最大范围内：(A) 本网站及所有产品和第三方材料均以“按原样”、“按所在地”和“按可用性”提供，不提供任何形式的保证；(B) DuckovGame 否认所有保证，包括适销性、特定用途适用性、非侵权性和所有权。",
+            "p1": "在法律允许的最大范围内：(A) 本网站及所有产品和第三方材料均以「按原样」、「按所在地」和「按可用性」提供，不提供任何形式的保证；(B) DuckovGame 否认所有保证，包括适销性、特定用途适用性、非侵权性和所有权。",
             "p2": "尽管我们努力确保准确性和安全性，但我们不能保证本网站始终正确、安全或不中断。如果您发现未经授权的更改，请联系我们："
         },
         "filtering": {
@@ -683,9 +694,9 @@
         },
         "miscellaneous": {
             "title": "杂项",
-            "p1": "本协议不构成您与 DuckovGame 之间的任何合伙、合资、雇佣或代理关系。如果任何条款不可执行，它将被删除，而不影响其余条款。",
+            "p1": "本协议不构成您与我们之间任何合伙、合资、雇佣或代理关系。如果任何条款不可执行，它将被删除，而不影响其余条款。",
             "p2": "未经我们同意，您不得转让您的权利或义务，但我们可以在不受限制的情况下转让我们的权利和义务。未能执行任何条款不构成我们日后执行该条款权利的放弃。",
-            "p3": "本协议，连同纳入其中的条款，是您与 DuckovGame 之间的完整协议，并取代所有先前的协议。通知可以通过电子邮件、邮件或在本网站上发布的方式送达。",
+            "p3": "本协议，连同纳入其中的条款，是您与我们之间完整的协议，并取代所有先前的协议。通知可以通过电子邮件、邮件或在本网站上发布的方式送达。",
             "p4": "DuckovGame 不对因超出其控制范围的原因而导致的履行失败承担责任。"
         }
     },
@@ -870,6 +881,50 @@
         "thankYou": {
             "title": "感谢",
             "text": "感谢您成为 DuckovGame 社区的一员！您的反馈和支持帮助我们继续为全球用户提供最佳体验。"
+        }
+    },
+    "SteamChartsPage": {
+        "title": "Steam Charts Snapshot",
+        "hero": {
+            "description": "通过 escape from duckov steam charts 快速了解当前突袭活跃度、峰值波动以及鸭子民兵正在如何壮大。",
+            "points": {
+                "live": "实时 escape from duckov player count 由 SteamDB 提供。",
+                "peak": "追踪 24 小时与历史峰值，安排最热闹的突袭时段。",
+                "reviews": "在一页内查看评论声量、粉丝增长和愿望单动向。"
+            }
+        },
+        "note": "统计数据来自 SteamDB 快照，仅供参考。",
+        "cards": {
+            "playersNow": {
+                "label": "正在游玩",
+                "value": "130k+",
+                "desc": "全天都有数以万计的小队在 Duckov 的各个地图中执行突袭。"
+            },
+            "peak24h": {
+                "label": "24 小时峰值",
+                "value": "170k+",
+                "desc": "高峰时段持续高于首发周，热度仍在不断攀升。"
+            },
+            "positiveReviews": {
+                "label": "好评率",
+                "value": "94%+",
+                "desc": "玩家普遍称赞深入的进程系统、团队配合与藏身处玩法。"
+            },
+            "followers": {
+                "label": "关注人数",
+                "value": "95k+",
+                "desc": "大量社区成员关注最新补丁、清档和装备更新。"
+            }
+        },
+        "summary": {
+            "title": "为什么要关注 escape from duckov player count",
+            "description": "这些摘要帮助你将 steam charts 数据转化为实际突袭决策——何时冲突袭、何时囤货、以及下一波人潮可能何时到来。",
+            "items": {
+                "ranking": "生存类排行榜前列：常年稳定在活跃射击游戏前十。",
+                "twitch": "直播热度：每天都有成千上万人观看撤离、藏身处展示与赛事。",
+                "owners": "估算全球拥有者已达 100 万+，每次清档都会涌入新的小队。",
+                "community": "社区动向：愿望单与评论激增往往预示着重大版本或活动。"
+            }
         }
     }
 }
